@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+16-Aug-2010 Andrew Eddie
+ # Fixed issue [#21822] Add footer to Bluestork template (Michael Babker).
+
 15-Aug-2010 Mark Dexter
  # [#21558] Feed datetime formats are invalid
  # [#21756] Notices when a contact is unpublished but linked 
